# microshard-uuid

./: .gitignore  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: 🐛-bug-report.md  💡-feature-request.md
db-extensions/clickhouse/: Makefile  README.md  microshard_uuid.sql
db-extensions/clickhouse/tests/: test_microshard.py
db-extensions/duckdb/: Makefile  README.md  microshard_uuid.sql
db-extensions/duckdb/tests/: test_microshard.py
db-extensions/mysql/: Makefile  README.md  microshard_uuid.sql
db-extensions/mysql/tests/: test_microshard.py
db-extensions/postgres/: Makefile  README.md  microshard_uuid.sql
db-extensions/postgres/tests/: test_microshard.py
db-extensions/sqlite/: Makefile  README.md  microshard_uuid.c
db-extensions/sqlite/tests/: test_sqlite.py
implementations/c_cpp/: Makefile  README.md  microshard_uuid.h  microshard_uuid.hpp  test_microshard.c  test_microshard.cpp
implementations/go/: Makefile  README.md  go.mod  microshard_uuid.go  microshard_uuid_test.go
implementations/js/: README.md  package-lock.json  package.json
implementations/js/src/: index.js
implementations/js/test/: test.js  test.ts
implementations/js/types/: index.d.ts
implementations/lua/: Makefile  README.md  microsharduuid.lua  test_microshard.lua
implementations/python/: Makefile  README.md  pyproject.toml
implementations/python/src/microshard_uuid/: __init__.py  (+1 more)
implementations/python/tests/: test_microshard_uuid.py
implementations/rust/: Cargo.toml  README.md
implementations/rust/src/: lib.rs
implementations/rust/tests/: integration_test.rs
