[package]
name = "microshard-uuid"
version = "1.0.0"
edition = "2021"
description = "A zero-lookup, partition-aware UUIDv8 implementation with microsecond precision."
authors = ["dilipvamsi"]
license = "MIT"

[dependencies]
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0" # Clean error handling
