[package]
name = "microshard-uuid"
version = "1.0.0"
edition = "2021"
description = "A zero-lookup, partition-aware UUIDv8 implementation with microsecond precision. Zero dependencies."
authors = ["dilipvamsi"]
license = "MIT"
repository = "https://github.com/dilipvamsi/microshard-uuid"
readme = "README.md"
keywords = ["uuid", "uuidv8", "sharding", "zero-dependency", "database"]
categories = ["data-structures", "database", "no-std"]

# -------------------------------------------------------------------
# Dependencies
# -------------------------------------------------------------------
[dependencies]
# 🚀 ZERO DEPENDENCIES
# We use std::time and a custom internal PRNG to keep this lightweight.

# -------------------------------------------------------------------
# Dev Dependencies (for running tests)
# -------------------------------------------------------------------
[dev-dependencies]
# No external dev-dependencies required either.
# Tests use standard library assertions.
